# RAG_TUTORIAL

./: .dockerignore  .gitignore  Dockerfile  README.md  address.py  app.py  class-diagram.drawio - draw.io.html  client.ipynb  crawl.py  docker-compose.yaml  index.html  main.py  naver_api.py  pyproject.toml  requirements.txt  sample.py  server.py  streamlit_app.py  test_db.py
.github/workflows/: build.yaml  deploy.yaml  index-update.yaml
app/: Dockerfile  main.py  repository.py  requirements.txt
assets/: rag_diagram.drawio
chroma/: chroma.sqlite3
diagram/: api.js.다운로드  cb=gapi.loaded_0  dropins.js.다운로드
nginx/: nginx.conf
scheduled/: Dockerfile  main.py  requirements.txt
scheduled/src/: crawl.py  jobs.py  main.py  preprocess.py  rag.py  repository.py  summary.py  update_db.py
test/: test_crawl.py
