[tool.poetry]
name = "rag-tutorial"
version = "0.1.0"
description = ""
authors = ["eunsung <edplab2019@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
langchain = "^0.2.16"
langchain-openai = "^0.1.23"
langchain-core = "^0.2.38"
langchain-chroma = "^0.1.3"
chromadb = ">=0.4.0"
langchain-text-splitters = "^0.2.4"
bs4 = "^0.0.2"
opentelemetry-exporter-otlp-proto-grpc = "1.25.0"
langchain-community = "^0.2.16"
langserve = {extras = ["all"], version = "^0.2.3"}
fastapi = "^0.112.2"
faiss-cpu = "^1.8.0.post1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
